
    \item \code{stsplot_time(..., as.one=TRUE)} is now implemented
    (yielding a simple \code{matplot} of multiple time series).
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{plotHHH4_season()} now by default draws a horizontal
    reference line at unity if the multiplicative effect of component
    seasonality is shown (i.e., if \code{intercept=FALSE}).
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item \code{stsplot_spacetime()} now recognizes its \code{opts.col}
    argument.
    
    \item Conversion from \code{"ts"} to \code{"sts"} using
    \code{as(ts, "sts")} could set a wrong start time. For instance,
    \code{as(ts(1:10, start=c(1959,2), frequency=4), "sts")@start} was
    \code{c(1959,1)}.
  }
}

}



\section{Changes in surveillance version 1.11.0 (2016-02-08)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item \code{update.epidata()} can now handle a distance matrix
    \code{D} in the form of a classed \code{"Matrix"}
    (suggested by George Wood).
    
    \item \code{glrnb()} can now handle \code{ret="cases"} for the
    generalized likelihood ratio detector based on the negative binomial
    distribution. It's based on a brute-force search and hence might be
    slow in some situations.

    \item \code{boda()} and \code{bodaDelay()} now support an
    alternative method (\code{quantileMethod="MM"}) to compute quantiles
    based on the posterior distribution. The new method samples
    parameters from the posterior distribution and then computes the
    quantile of the mixture distribution using bisectionning, which is
    faster and yields similar results compared to the original method
    (\code{quantileMethod="MC"}, still the default).
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item Revised \code{vignette("hhh4")}, updated the package
    description as well as some references in the documentation.
    Also updated (the cache of) the slightly outdated