@@ -490,18 +490,3 @@ export(plotHHH4sims_size)
 export(plotHHH4sims_time)
 S3method(scores, hhh4sims)
 S3method(scores, hhh4simslist)
-
-## backwards-compatibility for old class name "ah4"
-S3method(print, ah4)
-S3method(summary, ah4)
-S3method(print, summary.ah4)
-S3method(logLik, ah4)
-S3method(terms, ah4)
-S3method(coef, ah4)
-S3method(fixef, ah4)
-S3method(ranef, ah4)
-S3method(confint, ah4)
-S3method(predict, ah4)
-S3method(update, ah4)
-S3method(simulate, ah4)
-S3method(plot, ah4)
